Move the script to a seperate file

--- a/.travis.yml
+++ b/.travis.yml
@@ -23,10 +23,6 @@ sudo: required  # Use container-based infrastructure for a faster build.
 deploy:
   provider: script
   skip_cleanup: true
-  script:
-    - echo $PASS | openconnect $USER@pyrite.cs.iastate.edu --passwd-on-stdin --user $USER --group SSLvpn
-    - rsync --perms --chmod=ug+rw,Dug+x,Fug-x,o-rwx --recursive --delete --progress \
-          -e 'echo $PASS | sshpass -d 1' \
-          "$local_src" "$USER@$remote_host:$remote_dest"
+  script: automatically.sh
   on:
     branch: feature/travisCI
