--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,6 @@ sudo: required  # Use container-based infrastructure for a faster build.
 deploy:
   provider: script
   skip_cleanup: true
-  script: ./_scripts/deploy/automatically.sh
+  script: sh ./_scripts/deploy/automatically.sh
   on:
     branch: feature/travisCI
