--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ rvm:
 - 2.2.5
 
 before_install:
-  - sudo apt-get install openconnect
-  - sudo apt-get install sshpass
+  - sudo apt-get -q -y update
+  - sudo apt-get install -y openconnect
+  - sudo apt-get install -y sshpass
 
 script: ./_scripts/cibuild
 
