--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ rvm:
 - 2.2.5
 
 before_install:
-  - sudo apt-get -q -y update
+  - sudo apt-get install -y rsync=3.1.1
   - sudo apt-get install -y openconnect
   - sudo apt-get install -y sshpass
 
