--- a/.travis.yml
+++ b/.travis.yml
@@ -20,4 +20,4 @@ deploy:
   skip_cleanup: true
   script: sh ./_scripts/deploy/automatically.sh
   on:
-    branch: feature/travisCI
+    branch: feature/travisCI-dwtj
