--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,9 @@ rvm:
 - 2.2.5
 dist: trusty
 before_install:
-- sudo apt-get install -y openconnect
-- sudo apt-get install -y sshpass
+  - sudo apt-get install -y rsync=2.6.9
+  - sudo apt-get install -y openconnect
+  - sudo apt-get install -y sshpass
 script: ./_scripts/cibuild
 env:
   global:
