--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: ruby
 rvm:
 - 2.2.5
 before_install:
-  - sudo apt-get install -y vpnc vpnc-scripts
+  - sudo apt-get install -y vpnc
   - sudo apt-get install -y network-manager-openconnect
   - sudo apt-get install -y sshpass
 script: ./_scripts/cibuild
